Fix spacing

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ h1 {
   font-size: 2.25rem;
   font-weight: 300;
   color: #fff;
-  margin: 2em 0;
 }
 
 h1 + p {
@@ -64,6 +63,7 @@ strong { font-weight: 900; }
   padding: 0 .5em 2em;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 /* main-content section */
@@ -71,8 +71,15 @@ strong { font-weight: 900; }
   padding: 2em 1em;
 }
 
+.intro > *,
+.main-content > * {
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* media queries */
-@media (min-width: 500px) {
+@media (min-width: 550px) {
   body {
     font-size: 1.125rem;
     display: flex;
@@ -91,5 +98,11 @@ strong { font-weight: 900; }
   .main-content {
     width: 50%;
     min-height: 100vh;
+  }
+
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
